--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.blitz</groupId>
-  <artifactId>flashboard</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <name>FlashBoard</name>
-  <description>Quizzing Application</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.blitz</groupId>
+	<artifactId>flashboard</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>FlashBoard</name>
+	<description>Quizzing Application</description>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -33,4 +34,63 @@
 			<version>4.3.11.Final</version>
 		</dependency>
 	</dependencies>
+
 </project>
+<plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.3</version>
+		<configuration>
+			<excludes>
+				<exclude>ngapp/**</exclude>
+			</excludes>
+		</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>3.0.0</version>
+		<configuration>
+			<excludes>
+				<exclude>ngapp/**</exclude>
+			</excludes>
+		</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>1.5.0</version>
+		<executions>
+			<execution>
+				<id>exec-npm-install</id>
+				<phase>generate-sources</phase>
+				<configuration>
+					<workingDirectory>${project.basedir}/src/main/ngapp</workingDirectory>
+					<executable>npm</executable>
+					<arguments>
+						<argument>install</argument>
+					</arguments>
+				</configuration>
+				<goals>
+					<goal>exec</goal>
+				</goals>
+			</execution>
+			<execution>
+				<id>exec-npm-ng-build</id>
+				<phase>generate-sources</phase>
+				<configuration>
+					<workingDirectory>${project.basedir}/src/main/ngapp</workingDirectory>
+					<executable>ng</executable>
+					<arguments>
+						<argument>build</argument>
+						<argument>--base-href=/ngfirst/ng/</argument>
+					</arguments>
+				</configuration>
+				<goals>
+					<goal>exec</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
+</plugins>  
