--- a/BlitzServer/RESTServices/.project
+++ b/BlitzServer/RESTServices/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RESTServices</name>
+	<name>FlashBoard</name>
 	<comment></comment>
 	<projects>
 	</projects>
