--- a/BlitzServer/RESTServices/pom.xml
+++ b/BlitzServer/RESTServices/pom.xml
@@ -35,9 +35,9 @@
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>11.2.0</version>
+    			<groupId>com.github.noraui</groupId>
+   			 <artifactId>ojdbc7</artifactId>
+    			<version>12.1.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
