Changed url-pattern in web.xml to simplify things

--- a/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
+++ b/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>JSONMapper</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 </web-app>
