--- a/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
+++ b/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,10 @@
       <param-name>com.sun.jersey.config.property.packages</param-name>
       <param-value>io.flashboard.servlets</param-value>
     </init-param>
+    <init-param>
+    	<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+    	<param-value>true</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
