--- a/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
+++ b/BlitzServer/RESTServices/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,14 @@
       <param-name>cors.allowed.origins</param-name>
       <param-value>http://localhost:4200</param-value>
     </init-param>
+    <init-param>
+       <param-name>cors.allowed.methods</param-name>
+       <param-value>GET, POST, PUT, DELETE, OPTIONS, HEAD</param-value>
+     </init-param>
+     <init-param>
+       <param-name>cors.allowed.headers</param-name>
+       <param-value>authorization, content-type</param-value>
+     </init-param>
   </filter>
   <filter-mapping>
     <filter-name>corsFilter</filter-name>
